# Cross-seed-rs

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: argument_tree.rs  cli_provider.rs  config.rs  mod.rs
src/torznab/: capabilities.rs  client.rs  error.rs  functions.rs  mod.rs  search_parameters.rs  torrent_result.rs
